tests/data/placebo/test_network_location_sg_missing_loc/ec2.CreateNetworkInterface_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "NetworkInterface": {
      "Status": "pending",
      "MacAddress": "0a:0f:3d:b6:b0:ce",
      "SourceDestCheck": true,
      "AvailabilityZone": "us-east-1a",
      "Description": "",
      "NetworkInterfaceId": "eni-4ccdab9c",
      "PrivateIpAddresses": [
        {
          "Primary": true,
          "PrivateIpAddress": "10.4.9.240"
        }
      ],
      "RequesterManaged": false,
      "SubnetId": "subnet-07bbcc4f",
      "VpcId": "vpc-7365db0a",
      "RequesterId": "AIDAIYEUEZZQWE5TZHHAE",
      "Groups": [
        {
          "GroupName": "web-tier",
          "GroupId": "sg-5256f823"
        },
        {
          "GroupName": "some-tier",
          "GroupId": "sg-4c5af43d"
        }
      ],
      "Ipv6Addresses": [],
      "OwnerId": "644160558196",
      "TagSet": [],
      "PrivateIpAddress": "10.4.9.240"
    }
  }
}
