tests/data/placebo/test_network_location_sg_missing_loc/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-5256f823",
    "ResponseMetadata": {}
  }
}
