tests/data/placebo/test_network_location_sg_missing_loc/ec2.CreateSecurityGroup_2.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-4c5af43d",
    "ResponseMetadata": {}
  }
}
