tests/data/placebo/test_network_location_sg_missing_loc/ec2.CreateSubnet_1.json
{
  "status_code": 200,
  "data": {
    "Subnet": {
      "AvailabilityZone": "us-east-1a",
      "AvailableIpAddressCount": 251,
      "DefaultForAz": false,
      "Ipv6CidrBlockAssociationSet": [],
      "VpcId": "vpc-7365db0a",
      "State": "pending",
      "MapPublicIpOnLaunch": false,
      "SubnetId": "subnet-07bbcc4f",
      "CidrBlock": "10.4.9.0/24",
      "AssignIpv6AddressOnCreation": false
    },
    "ResponseMetadata": {}
  }
}
