tests/data/placebo/test_network_location_sg_missing_loc/ec2.CreateTags_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "770c7ad4-9161-49e7-b1c2-01d23b31737b", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 26 Jun 2017 18:37:31 GMT"
            }
        }
    }
}
