tests/data/placebo/test_network_location_sg_missing_loc/ec2.DeleteNetworkInterface_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "08973c17-aa47-48fc-94d1-56029fae96d2", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 29 May 2017 11:15:26 GMT"
            }
        }
    }
}
