tests/data/placebo/test_network_location_sg_missing_loc/ec2.DeleteSecurityGroup_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "04cfa839-db09-4026-9a99-277f58692bef", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 26 Jun 2017 18:37:33 GMT"
            }
        }
    }
}
