tests/data/placebo/test_network_location_sg_missing_loc/ec2.DeleteVpc_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "f1ff4cf5-deab-4b2b-bf65-7eb24051c840", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Mon, 29 May 2017 11:15:27 GMT"
            }
        }
    }
}
