tests/data/placebo/test_network_location_sg_missing_loc/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "for apps",
        "Tags": [
          {
            "Value": "web",
            "Key": "Location"
          }
        ],
        "IpPermissions": [],
        "GroupName": "web-tier",
        "VpcId": "vpc-7365db0a",
        "OwnerId": "644160558196",
        "GroupId": "sg-5256f823"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "for rabbits",
        "IpPermissions": [],
        "GroupName": "some-tier",
        "VpcId": "vpc-7365db0a",
        "OwnerId": "644160558196",
        "GroupId": "sg-4c5af43d"
      }
    ],
    "ResponseMetadata": {}
  }
}
