tests/data/placebo/test_network_location_sg_missing_loc/tagging.TagResources_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {
      "RetryAttempts": 0,
      "HTTPStatusCode": 200,
      "RequestId": "770c7ad4-9161-49e7-b1c2-01d23b31737b",
      "HTTPHeaders": {
        "server": "AmazonEC2",
        "content-type": "application/x-amz-json-1.1",
        "date": "Mon, 26 Jun 2017 18:37:31 GMT",
        "content-length": "25",
        "x-amzn-requestid": "770c7ad4-9161-49e7-b1c2-01d23b31737b"
      }
    }
  }
}
